tests/emo-files/invalid/unterminated-string-eof.emo
# unterminated string test (EOF)

str s = "I love breaking things